<resources>
    <string name="app_name">Swolemate</string>
    <string name="auth_web_client_id">357181286024-j0cgb4djufuu5l86cc09bnntl5v3d3es.apps.googleusercontent.com</string>

    <!-- strings for add workout page -->
    <string name="add_workout_date">Add workout for: %1$s</string>
    <string name="workout_to_add">Select a workout:</string>
    <string name="workout_sets">Sets completed:</string>
    <string name="workout_reps">Reps per set:</string>
    <string name="workout_weight">Weight used:</string>
    <string name="workout_thoughts">Any thoughts?</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="blank_input_error">Must not be blank</string>
    <string name="double_check_toast">Please double check your input</string>

    <!-- dialog strings -->
    <string name="dialog_cancel_add_workout">Discard workout data and return to home screen?</string>
    <string name="dialog_cancel_positive">Discard</string>
    <string name="dialog_cancel_negative">Keep</string>
    <string name="dialog_save_workout">Save workout data? Here\'s a recap:\n</string>
    <string name="dialog_save_positive">Save</string>
    <string name="dialog_save_negative">Keep editing</string>
    <string name="inform_permissions_message">Swolemate will ask you for permission to access your device\'s
        location. This is used only to detect when you\'ve entered the gym in order to provide a more
        engaging experience. If you decline this permission, the app will continue to function normally.
        You can always change your mind later.</string>
    <string name="inform_permission_positive">Got it</string>
    <string name="about_message">Always be careful when working out, and consider workout out with a
        partner. Injuring yourself won\'t help you get stronger!\n\nImages are courtesy of Muscle Wiki.
        \n\nIcons courtesy of material.io
        </string>
    <string name="dialog_got_it">Got it</string>
    <string name="summary_message">You\'ve completed %1$d sessions in the last week, with a total of
        %2$d workouts.</string>
    <string name="dialog_summary_no_workouts">You haven\'t added any workouts this week. Want to add one now?</string>
    <string name="dialog_summary_add_workout">Add workout</string>
    <string name="dialog_summary_dont_add_workout">Cancel</string>
    <string name="dialog_delete_message">Do you want to delete this session? This can\'t be undone.</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_delete_negative">Keep</string>
    <string name="dialog_delete_gym_message">Do you want to delete this gym location from your list?
        You can always add it again from the main menu.</string>
    <string name="dialog_delete_gym_positive">Delete</string>
    <string name="dialog_delete_gym_negative">Keep</string>

    <!-- strings for text views etc -->
    <string name="session_summary_date_label">Workout session from:</string>
    <string name="session_summary_workouts_completed">Workouts completed:</string>
    <string name="sign_in_description">If you want to use some of the Swolemate services (like finding
        a workout buddy) you need to sign in with your Google account. Swolemate doesn\'t save any of
        your data with the exception of what you enter into the app. The app will still function normally
        if you decline this option, but you won\'t be able to utilise certain features.</string>

    <string name="sign_in_successful">Great news, %1$s. You\'re all signed in to Swolemate. Go ahead
        and set your personal details in the main menu to start finding friends.\n\nExcept that part
        doesn\'t actually do anything yet.</string>

    <!-- strings for workout detail fragment -->
    <string name="detail_listview_reps">Reps per set:</string>
    <string name="detail_listview_weight">Weight used:</string>
    <string name="detail_listview_sets">Sets:</string>
    <string name="detail_listview_thought">Your thoughts on this workout:</string>
    <string name="detail_listview_workout_name">Workout</string>

    <!-- menu strings -->
    <string name="menu_set_home">Set gym location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_workout_instructions">Workout guides</string>
    <string name="menu_about_app">About Swolemate</string>
    <string name="menu_weekly_summary">Weekly summary</string>
    <string name="menu_sign_in">Sign in to Swolemate</string>

    <!-- widget strings -->
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Last Workout:</string>
    <string name="widget_date_label">Date:</string>
    <string name="widget_workouts_label">Workouts:</string>
    <string name="widget_default">Add a workout to get started!</string>

    <!-- strings for geofence broadcast receiver, notifications -->
    <string name="geofence_notification_enter">Looks like you\'re at the gym. Do you want to add a workout?</string>
    <string name="geofence_notification_exit">Great job today!</string>
    <string name="geofence_channel_name">Swolemate Notification</string>
    <string name="geofence_channel_description">Notification from Swolemate</string>
    <string name="geofence_notificatin_add_workout">Add workout</string>

    <!-- strings for accessibility -->
    <string name="image_view_description">An image depicting the workout</string>
    <string name="fab_description">Add a workout</string>

    <!-- Toast strings -->
    <string name="toast_something_wrong">Something went wrong&#8230;</string>
    <string name="toast_loader_error">There was an error loading your data, please try again.</string>
    <string name="toast_place_exists">You\'ve previously saved this place</string>
    <string name="toast_place_saved">%1$s saved</string>
    <string name="toast_sign_out">Signed out successfully</string>
    <string name="toast_deletion_successful">Session deleted successfully</string>
    <string name="toast_save_succesful">Workout saved successfully</string>
    <string name="toast_need_permission">Location permission needed</string>
    <string name="title_activity_buddy">Find a Workout Buddy</string>
    <string name="toast_details_saved">Details saved</string>

    <!-- buddy activity strings-->
    <string name="bottom_nav_me">My Details</string>
    <string name="bottom_nav_find">Find Buddies</string>
    <string name="bottom_name_my_locations">Saved Locations</string>
    <string name="buddy_activity_title_details">Edit My Details</string>
    <string name="buddy_activity_title_saved_locations">My Saved Locations</string>
    <string name="buddy_activity_title_buddy_list">Find a Workout Buddy</string>
    <string name="buddy_activity_menu_help">Help</string>
    <string name="buddy_activity_no_people_available">There\'s nobody currently listed near you…</string>

    <!-- personal details fragment strings -->
    <string name="personal_details_checkbox_label">Keep me hidden</string>
    <string name="personal_details_checkbox_description">Check this box to hide your profile from the
        buddy page</string>
    <string name="personal_details_portait_description">Your personal portrait (taken from your Google
        account).</string>
    <string name="personal_details_looking_for">Looking for someone to:</string>
    <string name="personal_details_lift">Lift</string>
    <string name="personal_details_swim">Swim</string>
    <string name="personal_details_bike">Bike</string>
    <string name="personal_details_run">Run</string>
    <string name="personal_details_crossfit">Crossfit</string>
    <string name="personal_details_other">Something else</string>
    <string name="personal_details_bio_hint">Something short about yourself</string>


</resources>
