<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/menu_set_home"
        android:id="@+id/menu_set_home"
        android:orderInCategory="1"/>
    <item
        android:title="@string/menu_weekly_summary"
        android:id="@+id/menu_weekly_summary"
        android:orderInCategory="3"/>
    <item
        android:title="@string/menu_workout_instructions"
        android:id="@+id/menu_workout_instructions"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/menu_sign_in"
        android:orderInCategory="5"
        android:title="@string/menu_sign_in" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="6"
        android:title="@string/menu_settings" />
    <item
        android:title="@string/menu_about_app"
        android:id="@+id/menu_about"
        android:orderInCategory="7"/>

</menu>