<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_title"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/widgetSessionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/widgetTitle"
        android:layout_marginLeft="8dp"
        android:text="@string/widget_date_label" />

    <TextView
        android:id="@+id/widgetWorkoutsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/widget_workouts_label"
        android:layout_below="@+id/widgetSessionsLabel"
        android:layout_alignStart="@+id/widgetSessionsLabel" />

    <TextView
        android:id="@+id/widgetSessionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:layout_below="@+id/widgetTitle"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/widgetWorkoutsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:layout_alignBaseline="@+id/widgetWorkoutsLabel"
        android:layout_alignBottom="@+id/widgetWorkoutsLabel"
        android:layout_alignStart="@+id/widgetSessionsTextView" />
</RelativeLayout>